--- a/frontend/src/components/pages/user/Profile.module.css
+++ b/frontend/src/components/pages/user/Profile.module.css
@@ -1,10 +1,12 @@
-.auth_container {
-  padding: 4rem;
-  width: 100%;
+.prof_container {
+  margin: 1rem;
+  display: grid;
+  grid-template-columns: 1fr auto;
+  justify-content: start;
 }
 .title {
   font-size: 2rem;
-  margin-bottom: 2rem;
+  margin-bottom: .5rem;
   position: relative;
 }
 .title::before {
@@ -21,7 +23,7 @@
   max-width: 600px;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: .5rem;
 }
 
 input[type="submit"] {
@@ -45,4 +47,11 @@ input[type="submit"]:hover {
 
 .form a:hover{
     text-decoration: underline;
+}
+
+.image_cont {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: .5rem;
 }
