--- a/frontend/src/components/AuthContainer.module.css
+++ b/frontend/src/components/AuthContainer.module.css
@@ -7,6 +7,7 @@
 .content {
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .auth_image {
@@ -14,4 +15,14 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: left;
+}
+
+@media (max-width: 768px) {
+  .container {
+    grid-template-columns: 1fr;
+  }
+
+  .auth_image {
+    display: none;
+  }
 }
