--- a/frontend/src/components/pages/Auth/Register.module.css
+++ b/frontend/src/components/pages/Auth/Register.module.css
@@ -5,7 +5,7 @@
   margin: 0 auto;
 }
 .title {
-  font-size: clamp(1.5rem, 4vw, 2rem);
+  font-size: 1.8rem;
   margin-bottom: 2rem;
   position: relative;
   padding-left: 1.5rem;
@@ -78,5 +78,8 @@ input[type="submit"]:hover {
 
   input[type="submit"] {
     padding: 0.8rem;
+  }
+  .title {
+    padding: 0;
   }
 }
